--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
          
          <p style="float: center">
             <a href="#"> Home </a> |
-            <a href="#"> About </a> |
+            <a href="#About" title="That's my down web! Everything you want you gonna get it here. Much love and respect to y'all"> About </a> |
             <a href="#"> Contact Us </a> |
             <a href="#"> Terms of Services </a> |
             <a href="#"> Privacy Policy </a>
@@ -81,5 +81,11 @@ Moral: Evil begets evil </div> </p>
       <h6> © HotFlo II 30-Oct-2021 | All Rights Reserved </h6>
    </footer>
 </body>
-</html>
-   
+</html><!DOCTYPE html>
+<html>
+ tells that two friends were walking through the desert. During some point of the 
+journey they had an argument, and one friend slapped the other one in the face. The one 
+who got slapped was hurt, but without saying anything, wrote in the sand: “TODAY MY BEST 
+FRIEND SLAPPED ME IN THE FACE.” </p>
+
+ <p> They kept on walking until they found an oasis, where 
