--- a/index.html
+++ b/index.html
@@ -81,11 +81,5 @@ Moral: Evil begets evil </div> </p>
       <h6> © HotFlo II 30-Oct-2021 | All Rights Reserved </h6>
    </footer>
 </body>
-</html><!DOCTYPE html>
-<html>
- tells that two friends were walking through the desert. During some point of the 
-journey they had an argument, and one friend slapped the other one in the face. The one 
-who got slapped was hurt, but without saying anything, wrote in the sand: “TODAY MY BEST 
-FRIEND SLAPPED ME IN THE FACE.” </p>
+</html
 
- <p> They kept on walking until they found an oasis, where 
