--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -39,10 +40,11 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
    
    <h2 align="center"> SAND AND STORM</h2> 
    
-   <img src="alajka.jpeg" style="float:left" width="350px" height="300px" />
+ <center> <img src="alajka.jpeg" style="float:left" width="350px" height="300px" />
      
+  
      
-      <p> A story tells that two friends were walking through the desert. During some point of the 
+   <p style="text-align: center"> A story tells that two friends were walking through the desert. During some point of the 
 journey they had an argument, and one friend slapped the other one in the face. The one 
 who got slapped was hurt, but without saying anything, wrote in the sand: “TODAY MY BEST 
 FRIEND SLAPPED ME IN THE FACE.” </p>
@@ -76,10 +78,12 @@ they ate the poisoned food and died.
 Thus, these evil people met with an evil end.
 Moral: Evil begets evil </div> </p>
 
+</center>
    </main>
    <footer>
       <h6> © HotFlo II 30-Oct-2021 | All Rights Reserved </h6>
    </footer>
 </body>
-</html
+</html>
 
+   
