--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -27,6 +26,7 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
             <a href="#"> Contact Us </a> |
             <a href="#"> Terms of Services </a> |
             <a href="#"> Privacy Policy </a>
+             <a href="#about me is all i want you to know"> Testing</a>
          </p>
       </nav>
    </header>
@@ -86,4 +86,11 @@ Moral: Evil begets evil </div> </p>
 </body>
 </html>
 
-   
+
+
+
+
+
+
+
+
