--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
          
          <p style="float: center">
             <a href="#"> Home </a> |
-            <a href="#About" title="That's my down web! Everything you want you gonna get it here. Much love and respect to y'all"> About </a> |
+            <a href="#> About </a> |
             <a href="#"> Contact Us </a> |
             <a href="#"> Terms of Services </a> |
-            <a href="#"> Privacy Policy </a>
-             <a href="#about me is all i want you to know"> Testing</a>
+            <a href="#"> Privacy Policy </a>|
+            <a href="kool dough.html"> Test </a>
+            
          </p>
       </nav>
    </header>
@@ -85,12 +86,3 @@ Moral: Evil begets evil </div> </p>
    </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
