--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
    
  <center> <img src="alajka.jpeg" style="float:left" width="350px" height="300px" />
      
-   <audio src="Alajka - Hot Flgow II.mp3" controls autoplay> </audio>
+   <audio src="Alajka - Hot Flgow II.mp3" controls> </audio>
      
    <p style="text-align: center"> A story tells that two friends were walking through the desert. During some point of the 
 journey they had an argument, and one friend slapped the other one in the face. The one 
