--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
    
    
    
-   
+      <link rel="shortcut icon" href="alajkaklass/favicon.ico" />
+
+    
   
     <!--custom css-->
     <link rel="stylesheet" href="css/style.css">
