--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    
    
    
-      <link rel="shortcut icon" href="alajkaklass.jpeg/favicon.ico" />
+     <link rel="shortcut icon type="image/png" href="img/glass.png">
 
     
   
