--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html>
 <head>
 
-   <title>AlajkA </title>
-   <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="author" content="alajka">
-    <meta name="keywords" content="an island of bynia, it's five o'clock, the three thieves, sand & storm, learn cartoon animation, learn coding, stories, learn html">
+ <title>AlajkA </title>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta name="author" content="alajka">
+ <meta name="keywords" content="an island of bynia, it's five o'clock, the three thieves, sand & storm, learn cartoon animation, learn coding, stories, learn html">
    
    
-   <link rel="shortcut icon type="image/png" href="img/favicon.png">
    
   
     <!--custom css-->
     <link rel="stylesheet" href="css/style.css">
+   
+
+   <link rel="shortcut icon type="image/jpeg" href="img/favicon.jpeg">
+   
 </head>
          
       
