--- a/Stories.html
+++ b/Stories.html
@@ -61,7 +61,7 @@ He saw a beautiful ebony queen passing by. At first he lost a word to say! He wa
 She wore a blue jean and a white top. 
 She got a walk that pleases mind of all.
 As she came near him. He got up from where he sat, and move toward her. She gave him a look. He smile! He felt like
- <a href="#"> Continue reading... </a>      
+ <a href="five o'clock.html"> Continue reading... </a>      
 <h5>  
 
 <h3 align="center"> THE ISLAND OF BYNIA  <h3>
