--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
 
 <title>Quiz</title>
 
-<link rel="stylesheet" type="text/css" href="quiz.css">
+<link rel="stylesheet" href="quiz.css">
 
 
 </head> 
