--- a/quiz.html
+++ b/quiz.html
@@ -3,8 +3,12 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="quiz.css">
-<title>Quiz</title>
+<!--custom css-->
+
+    <link rel="stylesheet" href="css/style.css">
+
+ 
+ <title>Quiz</title>
 
 
 
