--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
 
 <title>Quiz</title>
 <!--custom css-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/quiz.css">
 
 
 
