--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
 
 <title>Quiz</title>
 <!--custom css-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="quiz.css">
 
 
 
@@ -95,8 +95,8 @@
 <p id="result"></p>
 
 
-<!--main js-->
-<script src="js/main.js"></script>
+<!--quiz js-->
+<script src="quiz.js"></script>
 
 
 </body>
