--- a/quiz.html
+++ b/quiz.html
@@ -5,8 +5,14 @@
 <head>
 
 <title>Quiz</title>
+<title>Quiz</title>
+
+
 <!--custom css-->
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="css/style.css">
+
+
+
 
 
 
