--- a/quiz.html
+++ b/quiz.html
@@ -101,8 +101,9 @@
 <p id="result"></p>
 
 
-<!--quiz js-->
-<script src="quiz.js"></script>
+<!--main js-->
+<script src="js/main.js"></script>
+
 
 
 </body>
