--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,7 @@
 
 
 <!--custom css-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/quiz.css">
 
 
 
@@ -102,7 +102,7 @@
 
 
 <!--main js-->
-<script src="js/main.js"></script>
+<script src="js/quiz.js"></script>
 
 
 
