--- a/five o'clock.html
+++ b/five o'clock.html
@@ -90,6 +90,6 @@ She narrated how she met him while narrating the scenario, a warm smile of joy, 
 
 
 
-<br><br><br> <a href="quiz.html"> <mark>Click to</mark> </a>Take a "Quiz" base on this Story!
+<br><br><br> <a href="Fi.html"> <mark>Click to</mark> </a>Take a "Quiz" base on this Story!
 <br>Good luck!!!
 
