--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#"> Animation </a> |
             <a href="#"> Music </a>|
             <a href="Stories.html"> Stories </a>|
-            <a href="#"> Drawing </a>|
+            <a href="drw"> Drawing </a>|
             <a href="About.html"> About </a> |
             <a href="Contact.html"> Contact</a> |
             <a href="#"> Terms of Services </a> |
