--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="Stories.html"> Stories </a>|
             <a href="Drr"> Drawing </a>|
             <a href="About.html"> About </a> |
-            <a href="Contact.html"> Contact</a> |
+            <a href="Contact Me.html"> Contact</a> |
             <a href="#"> Terms of Services </a> |
             <a href="#"> Privacy Policy </a>|
           <div> 
