--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#"> Animation </a> |
             <a href="#"> Music </a>|
             <a href="Stories.html"> Stories </a>|
-            <a href="Drr"> Drawing </a>|
+            <a href="Drawing"> Drawing </a>|
             <a href="About.html"> About </a> |
             <a href="Contact Me.html"> Contact</a> |
             <a href="#"> Terms of Services </a> |
