--- a/DrawCollec.html
+++ b/DrawCollec.html
@@ -12,7 +12,7 @@
 
 
     <!--custom css-->
-    <link rel="stylesheet" href="DrawCollec.css">
+    <link rel="stylesheet" href="css/DrawCollec.css">
 </head>
 <body>
 
