--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>MeMe</title>
+    <title>Alajka</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Alajka">
     <meta name="keywords" content="shinefor evermore,read, cartoons, animation">
